// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`save and share bar component email icon when tokenising with loading state while network request is fetching data 1`] = `
<BarItem>
  <div
    aria-valuemax="1"
    aria-valuemin="0"
    className="css-view-1dbjc4n r-alignItems-1awozwy r-justifyContent-1777fci"
    role="progressbar"
    style={
      Object {
        "borderBottomLeftRadius": "9999px",
        "borderBottomRightRadius": "9999px",
        "borderTopLeftRadius": "9999px",
        "borderTopRightRadius": "9999px",
        "height": "40px",
        "overflowX": "hidden",
        "overflowY": "hidden",
        "width": "40px",
      }
    }
  >
    <div
      className="css-view-1dbjc4n r-animationDuration-17bb2tj r-animationIterationCount-1muvv40 r-animationKeyframes-127358a r-animationTimingFunction-1ldzwu0 r-height-z80fyv r-width-19wmn03"
    >
      <svg
        height="100%"
        viewBox="0 0 32 32"
        width="100%"
      >
        <circle
          cx="16"
          cy="16"
          fill="none"
          r="14"
          strokeWidth="4"
          style={
            Object {
              "opacity": 0.2,
              "stroke": "#1976D2",
            }
          }
        />
        <circle
          cx="16"
          cy="16"
          fill="none"
          r="14"
          strokeWidth="4"
          style={
            Object {
              "stroke": "#1976D2",
              "strokeDasharray": 80,
              "strokeDashoffset": 60,
            }
          }
        />
      </svg>
    </div>
  </div>
</BarItem>
`;

exports[`save and share bar component save and share bar renders correctly when logged in 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "height": "100%",
      "justifyContent": "space-between",
      "paddingVertical": "10px",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 40,
      }
    }
  >
    <div
      style={
        Object {
          "color": "#696969",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 14,
          "lineHeight": 14,
          "marginRight": "10px",
          "transform": "translateY(9%)",
        }
      }
    >
      Share
    </div>
    <BarItem>
      <IconEmail
        fillColour="currentColor"
        height={16}
        title="Share by email"
      />
    </BarItem>
    <BarItem
      target="_blank"
      url="https://twitter.com/intent/tweet?text=https://www.thetimes.co.uk/"
    >
      <IconTwitter
        fillColour="currentColor"
        height={16}
        title="Share on Twitter"
      />
    </BarItem>
    <BarItem
      target="_blank"
      url="https://www.facebook.com/sharer/sharer.php?u=https://www.thetimes.co.uk/"
    >
      <IconFacebook
        fillColour="currentColor"
        height={18}
        title="Share on Facebook"
      />
    </BarItem>
    <BarItem
      color="#696969"
      hoverColor="#1D1D1B"
    >
      <IconCopyLink
        fillColour="currentColor"
        height={16}
        title="Copy link to clipboard"
      />
    </BarItem>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 40,
      }
    }
  >
    <SaveStarWeb
      articleId="96508c84-6611-11e9-adc2-05e1b87efaea"
      colour="#696969"
      height={18}
      hoverColor="#1D1D1B"
    />
  </div>
</div>
`;

exports[`save and share bar component save and share bar renders correctly when not logged in 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "height": "100%",
      "justifyContent": "space-between",
      "paddingVertical": "10px",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 40,
      }
    }
  >
    <div
      style={
        Object {
          "color": "#696969",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 14,
          "lineHeight": 14,
          "marginRight": "10px",
          "transform": "translateY(9%)",
        }
      }
    >
      Share
    </div>
    <BarItem>
      <IconEmail
        fillColour="currentColor"
        height={16}
        title="Share by email"
      />
    </BarItem>
    <BarItem
      target="_blank"
      url="https://twitter.com/intent/tweet?text=https://www.thetimes.co.uk/"
    >
      <IconTwitter
        fillColour="currentColor"
        height={16}
        title="Share on Twitter"
      />
    </BarItem>
    <BarItem
      target="_blank"
      url="https://www.facebook.com/sharer/sharer.php?u=https://www.thetimes.co.uk/"
    >
      <IconFacebook
        fillColour="currentColor"
        height={18}
        title="Share on Facebook"
      />
    </BarItem>
    <BarItem
      color="#696969"
      hoverColor="#1D1D1B"
    >
      <IconCopyLink
        fillColour="currentColor"
        height={16}
        title="Copy link to clipboard"
      />
    </BarItem>
  </div>
</div>
`;
